# thronglets

./: .dockerignore  .env.example  .gitignore  Agent.md  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
examples/openai/: README.md  agent.py
frontend/: index.html  package-lock.json  package.json  style_guide.md  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Badge.css  Badge.tsx  Button.css  Button.tsx  Card.css  Card.tsx  CopyButton.tsx  Input.css  Input.tsx  Modal.css  Modal.tsx  Tabs.css  Tabs.tsx  index.ts
frontend/src/hooks/: usePolling.ts
frontend/src/pages/: AgentsPage.css  AgentsPage.tsx  AppsPage.css  AppsPage.tsx  AuthPage.css  AuthPage.tsx  SystemPage.css  SystemPage.tsx  TasksPage.css  TasksPage.tsx  index.ts
frontend/src/types/: index.ts
frontend/src/utils/: clipboard.ts
tasks/: prd-app-registry.md  prd-dynamic-mcp.md
thronglets/: __init__.py  app_registry.py  auth.py  client.py  dynamic_mcp.py  http_api.py  main.py  mcp_server.py  models.py  store.py
thronglets/storage/: __init__.py  base.py  memory.py  redis.py
