[project]
name = "thronglets"
version = "0.1.0"
description = "Multi-Agent ServiceBus based on A2A protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "openai-agents[litellm]>=0.6.6",
]

[project.scripts]
thronglets = "thronglets.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["thronglets"]
